$Id: History,v 1.8 1999-10-22 03:20:48 tsasaki Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
Oct 22, 99 T.Sasaki G4SteppingMangaer.cc fixed the UserLmit problem     
Oct 13, 99 T.Sasaki updated G4SteppingVerbose and G4VSteppingVerbose 
Jun 29, 99 G.Folger have the ctor always assign a SteppingVerbose to fVerbose
Apr 15, 99 M.Asai (tracking-01-00-03)
- Make arguments in user action classes take const pointers.
- Make trajectory and trajectory point as derivable classes.
Mar 23, 99 T.Sasaki    (tracking-01-00-02)
- Fix for precision problem of safety in SteppingManager by John Apostolakis
- G4VSteppingVerbose is introduced  
Feb 18, 99 T.Sasaki (tracking-01-00-01)
- ShowStep() method was moved from G4Step to G4SteppingVerbose
Nov 25, 98 T.Sasaki    (tracking-00-04-03)
- Fix to G4SteppingManager.cc to set proper 2ndary numbers.
Nov 17 ,98 H.Kurashige (tracking-00-04-01)
- Fixed treatment of safety in case of ApplyCuts flag is ON

August 25, 98 G.Cosmo (tracking-00-02-01)
- Minor fix to G4SteppingManager.hh, G4SteppingVerbose.hh
  and G4TrackVector.hh.
  Angle brackets should be used for inclusion of RW classes!

July  1, 98 K. Amako
- Tag for tracking-00-07-02. This includes the following features.