@@ -5,9 +5,8 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4SteppingManager.hh,v 1.9 1999-12-16 13:29:54 gunter Exp $
+// $Id: G4SteppingManager.hh,v 1.10 2000-01-23 09:51:34 tsasaki Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
-//
 // 
 //---------------------------------------------------------------
 //
@@ -475,7 +474,7 @@ class G4SteppingManager
 
   inline void G4SteppingManager::SetUserAction(G4UserSteppingAction* apAction){
     if (fUserSteppingAction) delete fUserSteppingAction;
-    fUserSteppingAction = apAction;
+    if (apAction != NULL) fUserSteppingAction = apAction;
   }
   inline G4UserSteppingAction* G4SteppingManager::GetUserAction(){
     return fUserSteppingAction;
