@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4TrackingManager.hh,v 1.5 1999-12-15 14:53:57 gunter Exp $
+// $Id: G4TrackingManager.hh,v 1.6 2000-01-23 09:51:35 tsasaki Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 //
@@ -157,13 +157,17 @@ class G4TrackingManager
 
    inline void G4TrackingManager::SetUserAction(G4UserTrackingAction* apAction){
      if (fpUserTrackingAction) delete fpUserTrackingAction;
-     fpUserTrackingAction = apAction;
-     apAction->SetTrackingManagerPointer(this);
+     if(apAction != NULL){
+       fpUserTrackingAction = apAction;
+       apAction->SetTrackingManagerPointer(this);
+     }	
    }
 
    inline void G4TrackingManager::SetUserAction(G4UserSteppingAction* apAction){
-     fpSteppingManager->SetUserAction(apAction);
-     apAction->SetSteppingManagerPointer(fpSteppingManager);  
+     if(apAction != NULL){
+       fpSteppingManager->SetUserAction(apAction);
+       apAction->SetSteppingManagerPointer(fpSteppingManager);  
+     }	
    }
 
    inline void G4TrackingManager::SetVerboseLevel(G4int vLevel){ 
